# learning-c

./: C-Cheat-Sheet.md  README.md
basic/Chapter10/: 03.calendar.c  05.parse_time.c  06.time_diff.c
basic/Chapter11/: .gitignore  02.setbuf.c  05.read_write_a_line.c  06.copy_file_2.c  07.read_write_certain_bytes.c  08.serialization.c  12.count_characters.c  14.other_operations.c
basic/Chapter12/: 03.thread_safe_atomic.c  03.thread_safe_reorder.c  05.atomic_types.c  08.pure_function.c  10.callback.c  CMakeLists.txt
basic/Chapter13/: 03.shared_library.c
basic/Chapter13/07.call_from_java/: CMakeLists.txt
basic/Chapter13/07.call_from_java/java/: com_bennyhuo_jni_JniMain.h
basic/Chapter2/: 03.debug_c_program.c  04.code_style_bad_names.c  04.code_style_good_names.c  CMakeLists.txt
basic/Chapter3/: 05.constant.c  06.operators.c  07.condition.c  08.loop.c
basic/Chapter4/: 02.proto_type.c  03.variable_types_and_scope.c  04.varargs.c  CMakeLists.txt
basic/Chapter5/: 01.file_include.i.c  02.my_include_file.c  03.macro_function.c  04.conditional_macro.c  05.printlnf.c  CMakeLists.txt
basic/Chapter5/include/: factorial.h
basic/Chapter6/: 05.2d_array.c
basic/Chapter7/: 02.readonly_pointer.c  04.pointer_operations.c  05.lvalue_rvalue.c  08.function_pointer.c
basic/Chapter8/: 02.memory_align.c  04.enum.c
basic/Chapter9/: 06.string_concat_copy.c  09.safe_version.c
fundamental/: .gitignore
fundamental/Chapter10/: 01.basic_time.c  02.get_sys_time.c  04.format_time.c
fundamental/Chapter11/: 01.io_basics.c  03.read_write_a_character.c  04.copy_file_1.c  09.copy_file_3.c  11.redirect_stdout.c  13.position.c
fundamental/Chapter12/: 01.thread_basics.c  02.thread_how_to.c  03.thread_safe_visiblity.c  04.volatile.c  05.atomic_flag.c  06.lock.c  07.thread_local.c  07.thread_local_2.c  09.complex_thread_result.c
fundamental/Chapter13/: 04.library_with_cmake.c  05.conan.c  CMakeLists.txt  conanfile.txt
fundamental/Chapter13/06.call_from_cpp/: 06.call_from_cpp.cpp
fundamental/Chapter13/07.call_from_java/: fibonacci.c  fibonacci.h
fundamental/Chapter13/07.call_from_java/java/com/bennyhuo/jni/: JniMain.java
fundamental/Chapter13/factorial/: CMakeLists.txt  factorial.c
fundamental/Chapter13/fibonacci/: CMakeLists.txt  fibonacci.c
fundamental/Chapter13/mathutils/: factorial.c
fundamental/Chapter2/: 04.code_style_comments.c  env.md
fundamental/Chapter3/: 01.data_types_int.c  02.data_types_char.c  03.data_types_float.c  04.variable.c  09.guess_number.c  CMakeLists.txt
fundamental/Chapter4/: 01.function_basics.c  05.recursion.c  06.hanoi.c
fundamental/Chapter5/: 01.file_include.c
fundamental/Chapter6/: 01.array_basics.c  02.array_limits.c  03.string.c  04.array_parameter.c  06.shuffle_array.c  07.quick_sort.c
fundamental/Chapter7/: 01.pointer_basics.c  03.pointer_values.c  06.pointer_parameter_as_return_value.c  07.dynamic_memory.c  09.swap_values.c  10.quick_sort.c
fundamental/Chapter8/: 01.struct.c  03.union.c  05.byte_order.c  06.linked_list.c
fundamental/Chapter9/: 01.character_type.c  02.conversion.c  03.string_length_compare.c  04.find_char_and_substring.c  05.string_tokenize.c  07.mem_op.c  08.restrict.c  10.mbs_wcs.c
gtk/Chapter14/: 03.hello_world.c  04.config_themes.c  05.xml_layout.c  06.use_glade.c  07.css.c  09.oop.c  09.oop.cpp  10.memory.c  CMakeLists.txt  builder.ui  builder2.ui  builder3.css  builder3.ui  builder3.ui~
gtk/Chapter14/08.package_apps/: collect_dlls.py
gtk/Chapter14/08.package_apps/etc/gtk-3.0/: settings.ini
gtk/Chapter15/: CMakeLists.txt  calculator.c  calculator.css  calculator.h  calculator.ui  calculator.ui~  calculator2.ui~  cases.txt  console_ui.c  console_ui.h  gtk_ui.c  gtk_ui.h  main.c  operation.c  operation.h  ui.h  unit_test_ui.c  unit_test_ui.h
gtk/Chapter15/include/: time_utils.h
gtk/Chapter16/: CMakeLists.txt  README.md  conanfile.txt  downloader.ui~  downloader_new_task.ui  downloader_new_task.ui~  main.c
gtk/Chapter16/include/: basics.h
gtk/Chapter16/include/common/: http_common.h  http_manager.h  sqlite_manager.h  threadpool_manager.h
gtk/Chapter16/include/model/: database_common.h
gtk/Chapter16/include/ui/: ui_main.h  ui_task_list.h
gtk/Chapter16/include/utils/: file_utils.h  io_utils.h  object_utils.h  thread_utils.h  time_utils.h  ui_utils.h
gtk/Chapter16/src/common/: http_manager.c  sqlite_manager.c  threadpool_manager.c
gtk/Chapter16/src/model/: database_common.c  task_info.c
gtk/Chapter16/src/ui/: ui_download_task.c  ui_main.c
gtk/Chapter16/src/utils/: file_utils.c  ui_utils.c  unit_utils.c
lib/event-loop/: CMakeLists.txt  README.md
lib/event-loop/demo/: CMakeLists.txt  http_server01.c  http_server_test.c  telnet_server.c
lib/event-loop/lib/: acceptor.h  buffer.h  channel.c  channel.h  channel_map.c  channel_map.h  epoll_dispatcher.c  event_loop.c  event_loop.h  event_loop_thread.c  event_loop_thread.h  http_server.c  tcp_connection.c  tcp_server.c
lib/json/: .gitignore  CMakeLists.txt  README.md  leptjson.c  leptjson.h  test.c
lib/wget-gui/: CMakeLists.txt  LICENSE  README.md  conanfile.txt  downloader.css  downloader.db  main.c
network/: CMakeLists.txt
network/chap-11/: CMakeLists.txt  grace_client.c  grace_server.c
network/chap-12/: CMakeLists.txt  ping_client.c  ping_server.c
network/chap-13/: CMakeLists.txt  batch_write.c
network/chap-14/: CMakeLists.txt  udp_connect_client.c  udp_connect_client02.c  udp_connect_server.c
network/chap-15/: CMakeLists.txt  address_used.c  address_used02.c
network/chap-16/: CMakeLists.txt  stream_client.c  stream_server.c
network/chap-20/: select01.c
network/chap-21/: CMakeLists.txt  poll_server.c  poll_server02.c
network/chap-22/: CMakeLists.txt  nonblocking_client.c  nonblocking_server.c
network/chap-23/: epoll01.c
network/chap-25/: fork01.c
network/chap-26/: thread-helloworld.c  thread01.c  thread02.c
network/chap-27/: poll-server-onethread.c
network/chap-28/: poll-server-multithreads.c  test01.c
network/chap-29/: epoll-server-multithreads.c
network/chap-7/: CMakeLists.txt  unix_stream_server.c
(+61 files in other folders)
